apps/base/media/jellyfin/jellyfin/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  serviceName: jellyfin
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: artifactory.local.hejsan.xyz/docker/linuxserver/jellyfin:10.11.4@sha256:eb34c52b9fda39157fabee6fccb26729f1e710912896495fd1a91ba934703f58
          ports:
            - containerPort: 8096
              name: http
          volumeMounts:
            - name: jellyfin-config-pvc
              mountPath: /config
            - name: shared-storage
              mountPath: /mnt/storage
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-nfs-pvc
  volumeClaimTemplates:
    - metadata:
        name: jellyfin-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ${STORAGE_CLASS}
        resources:
          requests:
            storage: 70Gi
